test/files/neg/nopredefs.check
<<<<<<< HEAD
nopredefs.scala:5: error: not found: value Set
=======
nopredefs.scala:5: error: not found: value Set (similar: Seq)
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  val y = Set(3)
          ^
one error found
